test: improve readability using nested and display name